@@ -61,6 +61,7 @@ Fixes:
    * Fix update the min size hint on elm_label after a text set
    * Fix flip widget who show the two face at same time
    * Fix the naviframe to delete contents which are preserved_on set if the naviframe is deleted.
+   * Fix the naviframe to clear the title contents when it's item is deleted.
 
 Removals:
 
